...
                                        </connections>
                                    </segmentedControl>
                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="21" translatesAutoresizingMaskIntoConstraints="NO" id="h5X-KB-ohn">
                                        <rect key="frame" x="0.0" y="79" width="384" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="21" translatesAutoresizingMaskIntoConstraints="NO" id="4Hp-sk-iRd">
                                        <rect key="frame" x="0.0" y="130" width="384" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="switchAccess"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Enter"/>
                                        <connections>
                                            <action selector="enterTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g7D-fu-0wJ"/>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <state key="normal" title="Make an order" image="icons8-todo-list-100">
                                            <color key="titleColor" red="0.021878133420016592" green="0.49925113341968907" blue="0.4448085455479287" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <state key="normal" title="Our branches" image="icons8-map-64">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <state key="normal" title="Your orders" image="icons8-shopping-cart-64">
                                            <color key="titleColor" red="0.021425794341725417" green="0.48892891839378239" blue="0.4356119526006938" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Back"/>
                                        <connections>
                                            <action selector="backMenuButtonClicked:" destination="3mo-0p-qX6" eventType="touchUpInside" id="z2L-3Z-QkP"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Order"/>
                                <connections>
                                    <action selector="orderButtonClicked:" destination="0RD-S9-7I0" eventType="touchUpInside" id="44v-p0-KUi"/>
...
